--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
 		"node": ">=16.14.x",
 		"npm": ">=8.17.x"
 	},
+	"files": [
+		"dist"
+	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
 		"build": "rm -dr ./dist/ & tsc",
 		"release": "np",
@@ -38,8 +44,5 @@
 		"postcss-font-magician": "^3.0.0",
 		"pug": "^3.0.2",
 		"tailwindcss": "^3.2.4"
-	},
-	"publishConfig": {
-		"access": "public"
 	}
 }
