--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"test": "npm run build && node ./dist/pagery.js --dir=test --pugFile=views/test.pug"
 	},
 	"bin": {
-		"pagery": "node dist/pagery.js"
+		"pagery": "dist/pagery.js"
 	},
 	"repository": "github:tycrek/pagery",
 	"keywords": [
