--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"scripts": {
 		"build": "rm -dr ./dist/ & tsc",
 		"release": "np",
-		"test": "npm run build && node ./dist/pagery.js --dir=test --data=meta.json,foo.json"
+		"test": "npm run build && node ./dist/pagery.js --dir=test --data=meta.json,foo.json --exclude=head.pug,notme.pug"
 	},
 	"bin": {
 		"pagery": "dist/pagery.js"
