--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
 		"lib": [
 			"ES2022"
 		],
+		"declaration": true,
+		"declarationDir": "./dist",
 		"downlevelIteration": true,
 		"esModuleInterop": true
 	},
