test: updated tests for saving multiple CSS to file

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"build": "rm -dr ./dist/ & tsc",
 		"release": "np",
 		"test": "npm run test:cli && npm run test:config && npm run test:module",
-		"test:cli": "npm run build && node ./dist/pagery.js --dir=test --data=meta.json,foo.json --exclude=head.pug,notme.pug --tailwindFile=tailwind.css",
+		"test:cli": "npm run build && node ./dist/pagery.js --dir=test --data=meta.json,foo.json --exclude=head.pug,notme.pug --tailwindFile=tailwind.css,tailwind.2.css",
 		"test:config": "npm run build && node ./dist/pagery.js --config=test/pagery.config.json",
 		"test:module": "npm run build && node ./test/module-test.js"
 	},
