--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=TypeScript
+*.* linguist-language=TypeScript
 *.pug linguist-detectable=false
 *.css linguist-detectable=false
