--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"site",
 		"generator"
 	],
-	"author": "tycrek <t@tycrek.com> (https://tycrek.com/)",
+	"author": "tycrek <sylvie@tycrek.com> (https://tycrek.com/)",
 	"license": "ISC",
 	"bugs": "https://github.com/tycrek/pagery/issues",
 	"homepage": "https://github.com/tycrek/pagery#readme",
