--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 	"extends": "@tsconfig/node20/tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./dist",
+		"moduleResolution": "Bundler",
+		"module": "ESNext",
 		"target": "ES2022",
 		"lib": [
 			"ES2022"
