--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tycrek/pagery",
-	"version": "8.0.0-alpha.2",
+	"version": "8.0.0-alpha.3",
 	"exports": "./src/pagery.ts",
 	"tasks": {
 		"run": "deno run --allow-env --allow-sys --allow-read --allow-write ./src/pagery.ts"
@@ -23,7 +23,11 @@
 	},
 	"publish": {
 		"exclude": [
-			"test/"
+			"test/",
+			"views/",
+			"tailwind.css",
+			"tailwind.config.*",
+			".vscode/"
 		]
 	}
 }
