--- a/deno.json
+++ b/deno.json
@@ -14,6 +14,7 @@
 	},
 	"imports": {
 		"@std/cli": "jsr:@std/cli@^1.0.7",
+		"@std/fs": "jsr:@std/fs@^1.0.6",
 		"@std/path": "jsr:@std/path@^1.0.8",
 		"autoprefixer": "npm:autoprefixer@^10.4.20",
 		"cssnano": "npm:cssnano@^7.0.6",
