--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
 	"name": "@tycrek/pagery",
 	"license": "ISC",
 	"version": "8.0.0-alpha.4",
-	"exports": "./src/pagery.ts",
+	"exports": "./src/Pagery.ts",
 	"tasks": {
 		"test:blank": "deno run -A src/Pagery.ts",
 		"test:cli": "deno run -A src/Pagery.ts --dir=test --data=meta.json,foo.json,iter.json --exclude=head.pug,notme.pug --tailwindFile=tailwind.css,tailwind.2.css --postcssPlugins=npm:postcss-attribute-case-insensitive,npm:postcss-for,npm:postcss-each,npm:postcss-reporter",
