--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,7 @@
 	"exports": "./src/Pagery.ts",
 	"tasks": {
 		"test:blank": "deno run -A src/Pagery.ts",
-		"test:cli": "deno run -A src/Pagery.ts --dir=test --data=meta.json,foo.json,iter.json --exclude=head.pug,notme.pug --tailwindFile=tailwind.css,tailwind.2.css --postcssPlugins=npm:postcss-attribute-case-insensitive,npm:postcss-for,npm:postcss-each",
+		"test:cli": "deno run -A src/Pagery.ts --dir=test --data=meta.json,foo.json,iter.json --exclude=head.pug,notme.pug --tailwindFile=tailwind.css,tailwind.2.css --postcssPlugins=npm:postcss-attribute-case-insensitive,npm:postcss-for,npm:postcss-each --static=static",
 		"test:config": "deno run -A src/Pagery.ts --config=test/pagery.config.json",
 		"test:module": "deno run -A ./test/module-test.ts"
 	},
